// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Companion class should create expected Companion class instance 1`] = `
Companion {
  "giver": "Jeff",
  "isMaxCodex": false,
  "isUnlocked": false,
  "level": Level {
    "_value": 1,
    "max": 5,
    "min": 1,
    "onChange": undefined,
  },
  "name": "Fluff",
}
`;

exports[`Companions class toStorableData should return expected storable data 1`] = `
Object {
  "isMaxCodex": false,
  "isUnlocked": false,
  "level": 1,
}
`;

exports[`Companions class toStorableData should return expected storable data with isMaxCodex 1`] = `
Object {
  "isMaxCodex": true,
  "isUnlocked": false,
  "level": 1,
}
`;

exports[`Companions class toStorableData should return expected storable data with level 1`] = `
Object {
  "isMaxCodex": false,
  "isUnlocked": false,
  "level": 3,
}
`;
